--- a/style.css
+++ b/style.css
@@ -257,13 +257,21 @@ textarea.input-field {
 
 /* Slide Counter - YANGILANGAN */
 .slide-counter-container {
-    background: #2a2a2a;
-    border-radius: 100px;
     padding: 12px 24px;
     max-width: 450px;
     display: flex;
     align-items: center;
     gap: 20px;
+    border-radius: 1rem;
+    border: solid 1.5px #9e9e9e;
+    background: none;
+    
+}
+.slide-counter-container.active {
+    /* border-left: 8px solid var(--primary-color); */
+    border: 1.5px solid #1a73e8;
+    border-radius: 1rem;
+    padding-left: 16px;
 }
 
 .slide-info {
@@ -283,7 +291,7 @@ textarea.input-field {
 .slide-counter-label {
     font-size: 14px;
     font-weight: 500;
-    color: #9ca3af;
+    /* color: #9ca3af; */
 }
 
 .slide-counter-value {
@@ -909,14 +917,15 @@ color: #2196f3;
         color: white;
     }
 
-    .input-field:focus {
-        background: #3c3c3e;
-    }
+
+
     .input:focus, input:valid {
         background-color: var(--tg-theme-bg-color);
+        color: white;
         
     }
     .input:focus ~ label, input:valid ~ label {
         background-color: var(--tg-theme-bg-color);
     }
+
 }
